<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="title_activity_splash_screen">SplashActivity</string>
	<string name="title_activity_home_page">HomePage</string>
	<string name="title_activity_input_page">InputPage</string>
	<string name="title_activity_service_page">ServicePage</string>
	<string name="title_activity_transaction_page">TransactionHistory</string>
	<string name="title_activity_quantity_page">QuantityPage</string>
	<string name="title_activity_settings_page">SettingsPage</string>
	<string name="app_name">TakaApp2</string>
	<string name="pin_info">Set your 4-digit PIN code and User Name to be required at app_start. Then press OK</string>
	<string name="user_name">User Name</string>
	<string name="hint_pin">****</string>
	<string name="btn_ok">OK</string>
	<string name="recycler">Recycler</string>
	<string name="collector">Collector</string>
	<string name="change_pin">Change PIN</string>
	<string name="update_app">Update App</string>
	<string name="change_language">Change Language</string>
	<string name="quantity">Quantity</string>
	<string name="transaction_history">Transaction History</string>
	<string name="info">1.Enter Quantity you want to purchase/sell</string>
	<string name="info2">2.Pick weight kg,g or tonnes</string>
	<string name="info3">3.Click ok</string>
	<string name="amount">Amount expected to pay/get paid</string>
	<string-array name="quantity_array">
		<item>kg</item>
		<item>grams</item>
		<item>tonnes</item>
	</string-array>
</resources>
