<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		xmlns:android="http://schemas.android.com/apk/res/android">

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/info"
			android:textSize="20sp"
			android:textColor="@android:color/white"
			android:layout_marginTop="95dp"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"/>

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textColor="@android:color/white"
			android:text="@string/info2"
			android:layout_marginTop="140dp"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"/>

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textColor="@android:color/white"
			android:text="@string/info3"
			android:layout_marginTop="160dp"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"/>

	<EditText
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="10dp"
			android:id="@+id/etQuantityPage"
			android:inputType="number"
			android:background="@android:color/white"
			android:layout_marginTop="200dp"
			android:layout_marginRight="50dp"
			android:layout_marginLeft="50dp"/>

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/amount"
			android:textSize="18sp"
			android:textColor="@android:color/white"
			android:layout_marginTop="250dp"
			android:layout_marginRight="50dp"
			android:layout_marginLeft="50dp"/>

</RelativeLayout>