<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:background="@color/dark_green">

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/info"
			android:textSize="20sp"
			android:textColor="@android:color/white"
			android:layout_marginTop="130dp"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"
			android:id="@+id/textView1QuantityPage"/>

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textColor="@android:color/white"
			android:text="@string/info2"
			android:layout_marginTop="178dp"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"
			android:id="@+id/textView2QuantityPage"/>

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:textColor="@android:color/white"
			android:text="@string/info3"
			android:layout_marginTop="200dp"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"
			android:id="@+id/textView3QuantityPage"/>

	<EditText
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="10dp"
			android:id="@+id/etQuantityPage"
			android:inputType="number"
			android:background="@android:color/white"
			android:layout_marginTop="250dp"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="180dp"
			android:gravity="left|right"/>

	<Spinner
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:entries="@array/quantity_array"
			android:id="@+id/spinnerQuantities"
			android:layout_alignTop="@+id/etQuantityPage"
			android:layout_alignLeft="@+id/etQuantityPage"
			android:layout_marginRight="50dp"
			android:layout_marginLeft="150dp"
			android:gravity="bottom|left|right|top"
			/>

	<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/btnQuantityPageOk"
			android:text="@string/btn_ok"
			android:layout_marginTop="300dp"
			android:layout_marginRight="50dp"
			android:layout_marginLeft="50dp"
			android:padding="10dp"
			android:background="@drawable/button_style"/>

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/amount"
			android:textSize="18sp"
			android:textColor="@android:color/white"
			android:layout_marginTop="350dp"
			android:layout_marginRight="50dp"
			android:layout_marginLeft="50dp"
			android:id="@+id/tvQuantityAmount"/>

</RelativeLayout>